--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: William Wu # your name (or website title) here
-logo: "/images/mw2.jpg?raw=true" # your photo (or logo) here
+logo: "/images/tempWebsitePic.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description
+  Student, currently attending UC Davis
   <br><br>
-  Second description
+  Currently studying and pursuing a degree in Computer Science
   <br><br>
   <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a>
 
